--- a/HackFSU/Info.plist
+++ b/HackFSU/Info.plist
@@ -56,5 +56,7 @@
 	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>We need your Camera</string>
 </dict>
 </plist>
